--- a/ALLERGYKIDS/index_wheat_fact.html
+++ b/ALLERGYKIDS/index_wheat_fact.html
@@ -30,7 +30,7 @@
 
             <nav role="navigation">
                 <div>
-                    <a href="index.html"><img id="Logo" alt="לוגו האתר אלרג'יקידס" src="Images/LOGO.png" /></a>
+                    <a href="index.html"><img id="Logo" alt="לוגו האתר אלרג'יקידס" src="Images/Logo.png" /></a>
                 </div>
 
                 <ul>
