--- a/Kidsgames.html
+++ b/Kidsgames.html
@@ -31,7 +31,7 @@
 
             <nav>
                 <div>
-                    <a href="index.html"><img id="Logo" alt="לוגו האתר אלרג'יקידס" src="Images/LOGO.png" /></a>
+                    <a href="index.html"><img id="Logo" alt="לוגו האתר אלרג'יקידס" src="Images/Logo.png" /></a>
                 </div>
 
                 <ul>
