--- a/index_egg_fact - Accessibility.html
+++ b/index_egg_fact - Accessibility.html
@@ -30,7 +30,7 @@
 
             <nav role="navigation">
                 <div>
-                    <a href="index_egg_fact - Accessibility.html"><img id="Logo" alt="לוגו האתר אלרג'יקידס" src="Images/LOGO.png" /></a>
+                    <a href="index_egg_fact - Accessibility.html"><img id="Logo" alt="לוגו האתר אלרג'יקידס" src="Images/Logo.png" /></a>
                 </div>
 
                 <ul>
