--- a/Kidsgames.html
+++ b/Kidsgames.html
@@ -29,7 +29,7 @@
 
         <header>
 
-            <nav>
+            <nav role="navigation" aria-label="ניווט מרכזי">
                 <div>
                     <a href="index.html"><img id="Logo" alt="לוגו האתר אלרג'יקידס" src="Images/Logo.png" /></a>
                 </div>
