--- a/index - Accessibility.html
+++ b/index - Accessibility.html
@@ -28,7 +28,7 @@
 
         <header>
 
-            <nav role="navigation">
+            <nav role="navigation" aria-label="ניווט מרכזי">
                 <div>
                     <a href="index - Accessibility.html"><img id="Logo" alt="לוגו האתר אלרג'יקידס" src="Images/Logo.png" /></a>
                 </div>
