--- a/index_fish_fact.html
+++ b/index_fish_fact.html
@@ -157,7 +157,7 @@
                 </div>
 
                 <div>
-                    <img id="img_fish_fact" src="Images/Fish.png" alt="תמונה של דגים" />
+                    <img id="img_fish_fact" src="Images/Fish2.png" alt="תמונה של דגים" />
                 </div>
 
                 <div class="text_fish_fact">
