Update index - Accessibility.html

--- a/index - Accessibility.html
+++ b/index - Accessibility.html
@@ -196,22 +196,19 @@
                     "
                 </p>
 
-                <br />
-                <br />
-                <br />
+                <div class="br_for_img">
                 <div><img class="img_people" src="Images/Teacher.png" alt="מחנך " /></div>
                 <h3 class="Fixed_h3">אריאל דוד, 40</h3>
                 <p class="Fixed_p_S2">
+                                     
                     "
                     כמחנך כיתה א', השנה הצטרף ילד אלרגי לכיתה ונכנסתי לאתר לקרוא
                     קצת בנושא. <span class="bold_sentence_feedback">להפתעתי מצאתי תכנים לילדים</span>  ואני בהחלט אעביר להם
                     שייעור בנושא......
                     "
                 </p>
-
-                <br />
-                <br />
-                <br />
+                                 </div>
+                <div class="br_for_img">
 
                 <div><img class="img_people" src="Images/Principal.png" alt="מנהלת" /></div>
                 <h3 class="Fixed_h3">רונית ברדה, 51</h3>
@@ -222,7 +219,7 @@
                     הרלוונטים ואפילו <span class="bold_sentence_feedback">מצאתי שלט נחמד</span> נחמד לשער הכניסה.......
                     "
                 </p>
-
+                </div>
             </section>
             <!----------------------------עוד כמה דברים להציע------------------------------------>
 
@@ -239,12 +236,12 @@
                                 הפעלות לילדים
                             </h3>
                             <p class="paragraph_cards">
-                                הכירו לילדים את האלרגנים בצורה משעשעת עם מגוון דפי עבודה ויצירה
+                                הכירו לילדים את האלרגנים עם מגוון דפי עבודה ויצירה
                             </p>
-                            <br />
-                            <br />
+                           <div class="card_br_sec4">
 
                             <a class="cards_Link_design" href="Kidsgames - Accessibility.html">לצפייה בהפעלות לילדים >></a>
+                            </div>
                         </div>
                     </div>
 
@@ -257,11 +254,10 @@
                             <p class="paragraph_cards">
                                 מגוון הצעות למתכונים שכל ילד יאהב עם סינון לפי האלרגנים
                             </p>
-                            <br />
-                            <br />
-                            <br />
-
+                           
+<div class="card_br_sec4">
                             <a class="cards_Link_design notActive" href="#">לצפייה במתכונים >></a>
+                            </div>
                         </div>
                     </div>
 
@@ -274,11 +270,10 @@
                             <p class="paragraph_cards">
                                 הנחיות לשמירה על סביבה סטרילית מאלרגנים בבית ובחוץ
                             </p>
-                            <br />
-                            <br />
-                            <br />
+                            <div class="card_br_sec4">
 
                             <a class="cards_Link_design notActive" href="#">לצפייה בכללי הבטיחות >></a>
+                            </div>
                         </div>
                     </div>
 
@@ -291,11 +286,10 @@
                             <p class="paragraph_cards">
                                 טפסים עדכניים, חוזר מנכ"ל והצעות לשילוט
                             </p>
-                            <br />
-                            <br />
-                            <br />
+                           <div class="card_br_sec4">
 
                             <a class="cards_Link_design notActive" href="#">לצפייה בטפסים >></a>
+                            </div>
                         </div>
                     </div>
                 </div>
