--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                                 מגוון הצעות למתכונים שכל ילד יאהב עם סינון לפי האלרגנים
                             </p>
                           
-<div class="card_br_sec4>
+<div class="card_br_sec4">
                             <a class="cards_Link_design notActive" href="#">לצפייה במתכונים >></a>
                                                                            </div>
                         </div>
@@ -269,7 +269,7 @@
                             <p class="paragraph_cards">
                                 הנחיות לשמירה על סביבה סטרילית מאלרגנים בבית ובחוץ
                             </p>
-                            <div class="card_br_sec4>
+                            <div class="card_br_sec4">
 
                             <a class="cards_Link_design notActive" href="#">לצפייה בכללי הבטיחות >></a>
                             </div>
@@ -286,7 +286,7 @@
                                 טפסים עדכניים, חוזר מנכ"ל והצעות לשילוט
                             </p>
                             
-<div class="card_br_sec4>
+<div class="card_br_sec4">
                             <a class="cards_Link_design notActive" href="#">לצפייה בטפסים >></a>
              </div>
                         </div>
