--- a/index_wheat_fact.html
+++ b/index_wheat_fact.html
@@ -190,9 +190,7 @@
                     "
                 </p>
 
-                <br />
-                <br />
-                <br />
+               <div class="br_for_img">
                 <div><img class="img_people" src="Images/Teacher.png" alt="מחנך " /></div>
                 <h3 class="Fixed_h3">אריאל דוד, 40</h3>
                 <p class="Fixed_p_S2">
@@ -202,10 +200,8 @@
                     שייעור בנושא......
                     "
                 </p>
-
-                <br />
-                <br />
-                <br />
+                   </div>
+                <div class="br_for_img">
 
                 <div><img class="img_people" src="Images/Principal.png" alt="מנהלת" /></div>
                 <h3 class="Fixed_h3">רונית ברדה, 51</h3>
@@ -216,7 +212,7 @@
                     הרלוונטים ואפילו <span class="bold_sentence_feedback">מצאתי שלט נחמד</span> נחמד לשער הכניסה.......
                     "
                 </p>
-
+                </div>
             </section>
             <!----------------------------עוד כמה דברים להציע------------------------------------>
 
@@ -233,12 +229,12 @@
                                 הפעלות לילדים
                             </h3>
                             <p class="paragraph_cards">
-                                הכירו לילדים את האלרגנים בצורה משעשעת עם מגוון דפי עבודה ויצירה
+                                הכירו לילדים את האלרגנים עם מגוון דפי עבודה ויצירה
                             </p>
-                            <br />
-                            <br />
+                           <div class="card_for_sec4">
 
                             <a class="cards_Link_design" href="Kidsgames.html">לצפייה בהפעלות לילדים >></a>
+                            </div>
                         </div>
                     </div>
 
@@ -251,11 +247,10 @@
                             <p class="paragraph_cards">
                                 מגוון הצעות למתכונים שכל ילד יאהב עם סינון לפי האלרגנים
                             </p>
-                            <br />
-                            <br />
-                            <br />
+                           <div class="card_for_sec4">
 
                             <a class="cards_Link_design notActive" href="#">לצפייה במתכונים >></a>
+                            </div>
                         </div>
                     </div>
 
@@ -268,11 +263,10 @@
                             <p class="paragraph_cards">
                                 הנחיות לשמירה על סביבה סטרילית מאלרגנים בבית ובחוץ
                             </p>
-                            <br />
-                            <br />
-                            <br />
+                           <div class="card_for_sec4">
 
                             <a class="cards_Link_design notActive" href="#">לצפייה בכללי הבטיחות >></a>
+                            </div>
                         </div>
                     </div>
 
@@ -285,11 +279,10 @@
                             <p class="paragraph_cards">
                                 טפסים עדכניים, חוזר מנכ"ל והצעות לשילוט
                             </p>
-                            <br />
-                            <br />
-                            <br />
+                           <div class="card_for_sec4">
 
                             <a class="cards_Link_design notActive" href="#">לצפייה בטפסים >></a>
+                            </div>
                         </div>
                     </div>
                 </div>
