--- a/Kidsgames.html
+++ b/Kidsgames.html
@@ -566,8 +566,9 @@
                             הוראות מענה בחירום לילד בהתקף אלרגי
                         </p>
 
-                        <br />
+                       <div class="br_a_tizer">
                         <a href="#" class="notActive p_tizer_link">לצפייה במענה בחירום</a>
+                        </div>
                     </div>
 
                     <div>
@@ -576,8 +577,9 @@
                             טפסים עדכניים, חוזר מנכ"ל והצעות לשילוט
                         </p>
 
-                        <br />
+                       <div class="br_a_tizer">
                         <a href="#" class="notActive  p_tizer_link">לצפייה בטפסים</a>
+                        </div>
                     </div>
 
                     <div>
@@ -586,8 +588,9 @@
                             מגוון הצעות למתכונים מותאמים שכל ילד יאהב
                         </p>
 
-                        <br />
+                        <div class="br_a_tizer">
                         <a href="#" class="notActive p_tizer_link">לצפייה במתכונים</a>
+                        </div>
                     </div>
                 </div>
             </section>
