--- a/Allergens.html
+++ b/Allergens.html
@@ -593,8 +593,9 @@
                             כיצד להגיב בשעת חירום בזמן התקף אלרגי
                         </p>
 
-                        <br />
+                        <div class="br_a_tizer">
                         <a href="#" class="notActive p_tizer_link">לצפייה במענה בחירום</a>
+                        </div>
                     </div>
 
                     <div>
@@ -603,8 +604,9 @@
                             מגוון משחקים להעלאת המודעות לאלרגנים
                         </p>
 
-                        <br />
+                        <div class="br_a_tizer">
                         <a href="Kidsgames.html" class="p_tizer_link">לצפייה בהפעלות לילדים</a>
+                        </div>
                     </div>
 
                     <div>
@@ -613,8 +615,9 @@
                             מגוון מתכונים מותאמים שכל ילד יאהב
                         </p>
 
-                        <br />
+                        <div class="br_a_tizer">
                         <a href="#" class="notActive p_tizer_link">לצפייה במתכונים</a>
+                        </div>
                     </div>
                 </div>
             </section>
