--- a/Allergens - Accessibility.html
+++ b/Allergens - Accessibility.html
@@ -592,8 +592,9 @@
                         כיצד להגיב בשעת חירום בזמן התקף אלרגי
                     </p>
 
-                    <br />
+                    <div class="br_a_tizer">
                     <a href="#" class="notActive p_tizer_link">לצפייה במענה בחירום</a>
+                    </div>
                 </div>
 
                 <div>
@@ -602,8 +603,9 @@
                         מגוון משחקים להעלאת המודעות לאלרגנים
                     </p>
 
-                    <br />
+                   <div class="br_a_tizer">
                     <a href="Kidsgames - Accessibility.html" class="p_tizer_link">לצפייה בהפעלות לילדים</a>
+                    </div>
                 </div>
 
                 <div>
@@ -612,8 +614,9 @@
                         מגוון מתכונים מותאמים שכל ילד יאהב
                     </p>
 
-                    <br />
+                    <div class="br_a_tizer">
                     <a href="#" class="notActive p_tizer_link">לצפייה במתכונים</a>
+                    </div>
                 </div>
             </div>
         </section>
