--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="author" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-
     <!-- CSS -->
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47" crossorigin="anonymous">
 
@@ -197,9 +196,7 @@
                     "
                 </p>
 
-                <br />
-                <br />
-                <br />
+                <div class="br_for_img"> 
                 <div><img class="img_people" src="Images/Teacher.png" alt="מחנך " /></div>
                 <h3 class="Fixed_h3">אריאל דוד, 40</h3>
                 <p class="Fixed_p_S2">
@@ -209,10 +206,8 @@
                     שייעור בנושא......
                     "
                 </p>
-
-                <br />
-                <br />
-                <br />
+</div>
+               <div class="br_for_img"> 
 
                 <div><img class="img_people" src="Images/Principal.png" alt="מנהלת" /></div>
                 <h3 class="Fixed_h3">רונית ברדה, 51</h3>
@@ -223,7 +218,7 @@
                     הרלוונטים ואפילו <span class="bold_sentence_feedback">מצאתי שלט נחמד</span> נחמד לשער הכניסה.......
                     "
                 </p>
-
+                </div>
             </section>
             <!----------------------------עוד כמה דברים להציע------------------------------------>
 
@@ -240,12 +235,12 @@
                                 הפעלות לילדים
                             </h3>
                             <p class="paragraph_cards">
-                                הכירו לילדים את האלרגנים בצורה משעשעת עם מגוון דפי עבודה ויצירה
+                                הכירו לילדים את האלרגנים עם מגוון דפי עבודה ויצירה
                             </p>
-                            <br />
-                            <br />
+                           <div class="card_br_sec4"> 
 
                             <a class="cards_Link_design" href="Kidsgames.html">לצפייה בהפעלות לילדים >></a>
+                            </div>
                         </div>
                     </div>
 
@@ -258,11 +253,10 @@
                             <p class="paragraph_cards">
                                 מגוון הצעות למתכונים שכל ילד יאהב עם סינון לפי האלרגנים
                             </p>
-                            <br />
-                            <br />
-                            <br />
-
+                          
+<div class="card_br_sec4">
                             <a class="cards_Link_design notActive" href="#">לצפייה במתכונים >></a>
+                                                                           </div>
                         </div>
                     </div>
 
@@ -275,11 +269,10 @@
                             <p class="paragraph_cards">
                                 הנחיות לשמירה על סביבה סטרילית מאלרגנים בבית ובחוץ
                             </p>
-                            <br />
-                            <br />
-                            <br />
+                            <div class="card_br_sec4">
 
                             <a class="cards_Link_design notActive" href="#">לצפייה בכללי הבטיחות >></a>
+                            </div>
                         </div>
                     </div>
 
@@ -292,11 +285,10 @@
                             <p class="paragraph_cards">
                                 טפסים עדכניים, חוזר מנכ"ל והצעות לשילוט
                             </p>
-                            <br />
-                            <br />
-                            <br />
-
+                            
+<div class="card_br_sec4">
                             <a class="cards_Link_design notActive" href="#">לצפייה בטפסים >></a>
+             </div>
                         </div>
                     </div>
                 </div>
