--- a/index_wheat_fact.html
+++ b/index_wheat_fact.html
@@ -232,7 +232,7 @@
                             <p class="paragraph_cards">
                                 הכירו לילדים את האלרגנים עם מגוון דפי עבודה ויצירה
                             </p>
-                           <div class="card_for_sec4">
+                           <div class="card_br_sec4">
 
                             <a class="cards_Link_design" href="Kidsgames.html">לצפייה בהפעלות לילדים >></a>
                             </div>
@@ -248,7 +248,7 @@
                             <p class="paragraph_cards">
                                 מגוון הצעות למתכונים שכל ילד יאהב עם סינון לפי האלרגנים
                             </p>
-                           <div class="card_for_sec4">
+                           <div class="card_br_sec4">
 
                             <a class="cards_Link_design notActive" href="#">לצפייה במתכונים >></a>
                             </div>
@@ -264,7 +264,7 @@
                             <p class="paragraph_cards">
                                 הנחיות לשמירה על סביבה סטרילית מאלרגנים בבית ובחוץ
                             </p>
-                           <div class="card_for_sec4">
+                           <div class="card_br_sec4">
 
                             <a class="cards_Link_design notActive" href="#">לצפייה בכללי הבטיחות >></a>
                             </div>
@@ -280,7 +280,7 @@
                             <p class="paragraph_cards">
                                 טפסים עדכניים, חוזר מנכ"ל והצעות לשילוט
                             </p>
-                           <div class="card_for_sec4">
+                           <div class="card_br_sec4">
 
                             <a class="cards_Link_design notActive" href="#">לצפייה בטפסים >></a>
                             </div>
