--- a/index_wheat_fact - Accessibility.html
+++ b/index_wheat_fact - Accessibility.html
@@ -231,7 +231,7 @@
                             <p class="paragraph_cards">
                                 הכירו לילדים את האלרגנים עם מגוון דפי עבודה ויצירה
                             </p>
-                           <div class="card_for_sec4">
+                           <div class="card_br_sec4">
 
                             <a class="cards_Link_design" href="Kidsgames - Accessibility.html">לצפייה בהפעלות לילדים >></a>
                             </div>
@@ -247,7 +247,7 @@
                             <p class="paragraph_cards">
                                 מגוון הצעות למתכונים שכל ילד יאהב עם סינון לפי האלרגנים
                             </p>
-                           <div class="card_for_sec4">
+                           <div class="card_br_sec4">
 
                             <a class="cards_Link_design notActive" href="#">לצפייה במתכונים >></a>
                             </div>
@@ -263,7 +263,7 @@
                             <p class="paragraph_cards">
                                 הנחיות לשמירה על סביבה סטרילית מאלרגנים בבית ובחוץ
                             </p>
-                            <div class="card_for_sec4">
+                            <div class="card_br_sec4">
 
                             <a class="cards_Link_design notActive" href="#">לצפייה בכללי הבטיחות >></a>
                             </div>
@@ -279,7 +279,7 @@
                             <p class="paragraph_cards">
                                 טפסים עדכניים, חוזר מנכ"ל והצעות לשילוט
                             </p>
-                           <div class="card_for_sec4">
+                           <div class="card_br_sec4">
 
                             <a class="cards_Link_design notActive" href="#">לצפייה בטפסים >></a>
                             </div>
