--- a/index_wheat_fact.html
+++ b/index_wheat_fact.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="" />
     <meta name="author" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 
 
     <!-- CSS -->
