--- a/Kidsgames.html
+++ b/Kidsgames.html
@@ -8,7 +8,6 @@
     <meta name="author" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-
     <!-- CSS -->
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47" crossorigin="anonymous">
 
@@ -553,8 +552,7 @@
                 </div>
 
             </section>
-            <br />
-            <br />
+           
 
 
 
@@ -568,8 +566,9 @@
                             הוראות מענה בחירום לילד בהתקף אלרגי
                         </p>
 
-                        <br />
+                       <div class="br_a_tizer">
                         <a href="#" class="notActive p_tizer_link">לצפייה במענה בחירום</a>
+                        </div>
                     </div>
 
                     <div>
@@ -578,8 +577,9 @@
                             טפסים עדכניים, חוזר מנכ"ל והצעות לשילוט
                         </p>
 
-                        <br />
+                       <div class="br_a_tizer">
                         <a href="#" class="notActive  p_tizer_link">לצפייה בטפסים</a>
+                        </div>
                     </div>
 
                     <div>
@@ -588,8 +588,9 @@
                             מגוון הצעות למתכונים מותאמים שכל ילד יאהב
                         </p>
 
-                        <br />
+                        <div class="br_a_tizer">
                         <a href="#" class="notActive p_tizer_link">לצפייה במתכונים</a>
+                        </div>
                     </div>
                 </div>
             </section>
