--- a/Kidsgames - Accessibility.html
+++ b/Kidsgames - Accessibility.html
@@ -550,8 +550,7 @@
                 </div>
 
             </section>
-            <br />
-            <br />
+            
 
 
 
@@ -565,8 +564,9 @@
                             הוראות מענה בחירום לילד בהתקף אלרגי
                         </p>
 
-                        <br />
+                       <div class="br_a_tizer">
                         <a href="#" class="notActive p_tizer_link">לצפייה במענה בחירום</a>
+                        </div>
                     </div>
 
                     <div>
@@ -575,8 +575,9 @@
                             טפסים עדכניים, חוזר מנכ"ל והצעות לשילוט
                         </p>
 
-                        <br />
+                        <div class="br_a_tizer">
                         <a href="#" class="notActive  p_tizer_link">לצפייה בטפסים</a>
+                        </div>
                     </div>
 
                     <div>
@@ -585,8 +586,9 @@
                             מגוון הצעות למתכונים מותאמים שכל ילד יאהב
                         </p>
 
-                        <br />
+                        <div class="br_a_tizer">
                         <a href="#" class="notActive p_tizer_link">לצפייה במתכונים</a>
+                        </div>
                     </div>
                 </div>
             </section>
